[feature] Add support for non-cookie OAUTH2 flow
